trunk/Archive2/39/122fc849f56e52/output
main.cpp:30:9: error: array initializer must be an initializer list
    int b[] = 1, 35, 14, 47, 10 };
        ^
main.cpp:30:18: error: expected unqualified-id
    int b[] = 1, 35, 14, 47, 10 };
                 ^
main.cpp:30:17: error: expected ';' at end of declaration
    int b[] = 1, 35, 14, 47, 10 };
                ^
                ;
main.cpp:31:9: error: array initializer must be an initializer list
    int c[] = 9, 19,  3, 42, 24 };
        ^
main.cpp:31:18: error: expected unqualified-id
    int c[] = 9, 19,  3, 42, 24 };
                 ^
main.cpp:31:17: error: expected ';' after top level declarator
    int c[] = 9, 19,  3, 42, 24 };
                ^
                ;
main.cpp:31:33: error: extraneous closing brace ('}')
    int c[] = 9, 19,  3, 42, 24 };
                                ^
main.cpp:32:9: error: array initializer must be an initializer list
    int d[] = 33, 27, 23, 4, 28 };
        ^
main.cpp:32:19: error: expected unqualified-id
    int d[] = 33, 27, 23, 4, 28 };
                  ^
main.cpp:32:18: error: expected ';' after top level declarator
    int d[] = 33, 27, 23, 4, 28 };
                 ^
                 ;
main.cpp:32:33: error: extraneous closing brace ('}')
    int d[] = 33, 27, 23, 4, 28 };
                                ^
main.cpp:33:9: error: array initializer must be an initializer list
    int e[] = 26, 33, 40, 8, 23 };
        ^
main.cpp:33:19: error: expected unqualified-id
    int e[] = 26, 33, 40, 8, 23 };
                  ^
main.cpp:33:18: error: expected ';' after top level declarator
    int e[] = 26, 33, 40, 8, 23 };
                 ^
                 ;
main.cpp:33:33: error: extraneous closing brace ('}')
    int e[] = 26, 33, 40, 8, 23 };
                                ^
main.cpp:34:9: error: array initializer must be an initializer list
    int f[] = 46, 47, 43, 2, 32 };
        ^
main.cpp:34:19: error: expected unqualified-id
    int f[] = 46, 47, 43, 2, 32 };
                  ^
main.cpp:34:18: error: expected ';' after top level declarator
    int f[] = 46, 47, 43, 2, 32 };
                 ^
                 ;
main.cpp:34:33: error: extraneous closing brace ('}')
    int f[] = 46, 47, 43, 2, 32 };
                                ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
